# Topicsync

./: CHANGELOG.md  Makefile  Readme.md  pyproject.toml  setup.cfg  test.ipynb  test_client.py
.github/workflows/: unittest.yaml
chatroom/: __init__.py  command.py  logger.py  topic.py  topic_change.py  utils.py
chatroom/client/: client.py  request.py  topic.py
chatroom/router/: __init__.py  endpoint.py  router.py  service.py  topic.py
chatroom/server/: __init__.py  command.py  event_manager.py  server.py  service.py  topic.py
scripts/: run_server.py  test.py  test1.py  test_client1.py  test_client2.py
src/chatroom/: __init__.py  change.py  command.py  logger.py  service.py  state_machine.py  string_diff.py  topic.py  topic_change.py  utils.py
src/chatroom/client/: client.py
src/chatroom/router/: endpoint.py  router.py
src/chatroom/server/: client_manager.py  history_manager.py  server.py  update_buffer.py
src/chatroom/state_machine/: changes_tree.py  state_machine.py  transition_tree.py
src/chatroom_debugger/: __init__.py  debugger.py  index.html  main.js  style.css
src/topicsync/: __init__.py  change.py  topic.py
src/topicsync/server/: client_manager.py  history_manager.py  server.py  update_buffer.py
src/topicsync/state_machine/: changes_tree.py  state_machine.py  transition_tree.py
src/topicsync_debugger/: debugger.py  index.html
unittest/: test_change_deserialize.py  test_change_serialize.py  test_event_topic.py  test_service.py  test_state_machine.py  test_string_diff_change.py  test_string_diff_undo_redo.py  test_topic.py  utils.py
