[tool.poetry]
name = "chatroom"
version = "0.5.3"
description = ""
authors = ["peterxcli <peterxcli@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
websockets = "^11.0.3"
termcolor = "^2.3.0"

[tool.poetry.dev-dependencies]
pre-commit = "2.20.0"
black = "22.8.0"
isort = "5.10.1"
flake8 = "5.0.4"
bandit = "1.7.5"
pytest = "7.1.3"
pytest-asyncio = "0.20.3"
pytest-cov = "4.0.0"
requests = "2.28.1"
httpx = "0.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
