[project]

authors = [
    { name = "eri24816", email = "a931eric@gmail.com" },
    { name = "secminhr", email = "secminhrian@gmail.com" },
    { name = "peterxcli", email = "peterxcli@gmail.com" },
]

maintainers = [
    "eri24816 <a931eric@gmail.com>",
]

[tool.poetry]
name = "topicsync"
version = "0.11.0"
description = "A communication tool for multi-client applications over WebSockets."

authors = [
    "eri24816 <a931eric@gmail.com>",
    "secminhr <secminhrian@gmail.com>",
    "peterxcli <peterxcli@gmail.com>", 
]

maintainers = [
    "eri24816 <a931eric@gmail.com>",
]

packages = [
    { include = "topicsync", from = "src" },
    { include = "topicsync_debugger", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
websockets = "^11.0.3"
termcolor = "^2.3.0"

[tool.poetry.dev-dependencies]
pre-commit = "2.20.0"
black = "22.8.0"
isort = "5.10.1"
flake8 = "5.0.4"
bandit = "1.7.5"
pytest = "7.1.3"
pytest-asyncio = "0.20.3"
pytest-cov = "4.0.0"
requests = "2.28.1"
httpx = "0.23.0"



[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
